source/_build/default/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On PACKAGE shift to state 1
-- On file shift to state 152
## Reductions:

State 1:
## Known stack suffix:
## PACKAGE
## LR(1) items:
file -> PACKAGE . ident_main SEMICOLON boption(import_fmt) list(decl) EOF [ # ]
## Transitions:
-- On IDENT shift to state 2
-- On ident_main shift to state 3
-- On ident shift to state 151
## Reductions:

State 2:
## Known stack suffix:
## IDENT
## LR(1) items:
ident -> IDENT . [ VERTICALBARVERTICALBAR STRUCT STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTPAR LEFTBRACE IDENT EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
## Reductions:
-- On VERTICALBARVERTICALBAR STRUCT STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTPAR LEFTBRACE IDENT EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND
--   reduce production ident -> IDENT

State 3:
## Known stack suffix:
## PACKAGE ident_main
## LR(1) items:
file -> PACKAGE ident_main . SEMICOLON boption(import_fmt) list(decl) EOF [ # ]
## Transitions:
-- On SEMICOLON shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## PACKAGE ident_main SEMICOLON
## LR(1) items:
file -> PACKAGE ident_main SEMICOLON . boption(import_fmt) list(decl) EOF [ # ]
## Transitions:
-- On IMPORT shift to state 5
-- On import_fmt shift to state 8
-- On boption(import_fmt) shift to state 9
## Reductions:
-- On TYPE FUNC EOF
--   reduce production boption(import_fmt) ->

State 5:
## Known stack suffix:
## IMPORT
## LR(1) items:
import_fmt -> IMPORT . STRING SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On STRING shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## IMPORT STRING
## LR(1) items:
import_fmt -> IMPORT STRING . SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On SEMICOLON shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## IMPORT STRING SEMICOLON
## LR(1) items:
import_fmt -> IMPORT STRING SEMICOLON . [ TYPE FUNC EOF ]
## Transitions:
## Reductions:
-- On TYPE FUNC EOF
--   reduce production import_fmt -> IMPORT STRING SEMICOLON

State 8:
## Known stack suffix:
## import_fmt
## LR(1) items:
boption(import_fmt) -> import_fmt . [ TYPE FUNC EOF ]
## Transitions:
## Reductions:
-- On TYPE FUNC EOF
--   reduce production boption(import_fmt) -> import_fmt

State 9:
## Known stack suffix:
## PACKAGE ident_main SEMICOLON boption(import_fmt)
## LR(1) items:
file -> PACKAGE ident_main SEMICOLON boption(import_fmt) . list(decl) EOF [ # ]
## Transitions:
-- On TYPE shift to state 10
-- On FUNC shift to state 30
-- On list(decl) shift to state 147
-- On decl shift to state 149
## Reductions:
-- On EOF
--   reduce production list(decl) ->

State 10:
## Known stack suffix:
## TYPE
## LR(1) items:
decl -> TYPE . ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On ident shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## TYPE ident
## LR(1) items:
decl -> TYPE ident . STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On STRUCT shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## TYPE ident STRUCT
## LR(1) items:
decl -> TYPE ident STRUCT . LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On LEFTBRACE shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## TYPE ident STRUCT LEFTBRACE
## LR(1) items:
decl -> TYPE ident STRUCT LEFTBRACE . loption(fields) RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On loption(fields) shift to state 19
-- On ids_and_type shift to state 22
-- On ident shift to state 24
-- On fields shift to state 29
## Reductions:
-- On RIGHTBRACE
--   reduce production loption(fields) ->

State 14:
## Known stack suffix:
## separated_nonempty_list(COMMA,ident)
## LR(1) items:
ids_and_type -> separated_nonempty_list(COMMA,ident) . type_expr [ SEMICOLON RIGHTPAR RIGHTBRACE COMMA ]
## Transitions:
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 18
-- On ident shift to state 17
## Reductions:

State 15:
## Known stack suffix:
## STAR
## LR(1) items:
type_expr -> STAR . type_expr [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
## Transitions:
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 16
-- On ident shift to state 17
## Reductions:

State 16:
## Known stack suffix:
## STAR type_expr
## LR(1) items:
type_expr -> STAR type_expr . [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA
--   reduce production type_expr -> STAR type_expr

State 17:
## Known stack suffix:
## ident
## LR(1) items:
type_expr -> ident . [ SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RIGHTPAR RIGHTBRACE LEFTBRACE EQ COMMA
--   reduce production type_expr -> ident

State 18:
## Known stack suffix:
## separated_nonempty_list(COMMA,ident) type_expr
## LR(1) items:
ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr . [ SEMICOLON RIGHTPAR RIGHTBRACE COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RIGHTPAR RIGHTBRACE COMMA
--   reduce production ids_and_type -> separated_nonempty_list(COMMA,ident) type_expr

State 19:
## Known stack suffix:
## TYPE ident STRUCT LEFTBRACE loption(fields)
## LR(1) items:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) . RIGHTBRACE SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On RIGHTBRACE shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE
## LR(1) items:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE . SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On SEMICOLON shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON
## LR(1) items:
decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON . [ TYPE FUNC EOF ]
## Transitions:
## Reductions:
-- On TYPE FUNC EOF
--   reduce production decl -> TYPE ident STRUCT LEFTBRACE loption(fields) RIGHTBRACE SEMICOLON

State 22:
## Known stack suffix:
## ids_and_type
## LR(1) items:
fields -> ids_and_type . option(SEMICOLON) [ RIGHTBRACE ]
fields -> ids_and_type . SEMICOLON fields [ RIGHTBRACE ]
## Transitions:
-- On SEMICOLON shift to state 23
-- On option(SEMICOLON) shift to state 28
## Reductions:
-- On RIGHTBRACE
--   reduce production option(SEMICOLON) ->

State 23:
## Known stack suffix:
## ids_and_type SEMICOLON
## LR(1) items:
fields -> ids_and_type SEMICOLON . fields [ RIGHTBRACE ]
option(SEMICOLON) -> SEMICOLON . [ RIGHTBRACE ]
## Transitions:
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On ids_and_type shift to state 22
-- On ident shift to state 24
-- On fields shift to state 27
## Reductions:
-- On RIGHTBRACE
--   reduce production option(SEMICOLON) -> SEMICOLON

State 24:
## Known stack suffix:
## ident
## LR(1) items:
separated_nonempty_list(COMMA,ident) -> ident . [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
separated_nonempty_list(COMMA,ident) -> ident . COMMA separated_nonempty_list(COMMA,ident) [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
## Transitions:
-- On COMMA shift to state 25
## Reductions:
-- On STAR SEMICOLON RIGHTBRACE IDENT EQ
--   reduce production separated_nonempty_list(COMMA,ident) -> ident

State 25:
## Known stack suffix:
## ident COMMA
## LR(1) items:
separated_nonempty_list(COMMA,ident) -> ident COMMA . separated_nonempty_list(COMMA,ident) [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
## Transitions:
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 26
-- On ident shift to state 24
## Reductions:

State 26:
## Known stack suffix:
## ident COMMA separated_nonempty_list(COMMA,ident)
## LR(1) items:
separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident) . [ STAR SEMICOLON RIGHTBRACE IDENT EQ ]
## Transitions:
## Reductions:
-- On STAR SEMICOLON RIGHTBRACE IDENT EQ
--   reduce production separated_nonempty_list(COMMA,ident) -> ident COMMA separated_nonempty_list(COMMA,ident)

State 27:
## Known stack suffix:
## ids_and_type SEMICOLON fields
## LR(1) items:
fields -> ids_and_type SEMICOLON fields . [ RIGHTBRACE ]
## Transitions:
## Reductions:
-- On RIGHTBRACE
--   reduce production fields -> ids_and_type SEMICOLON fields

State 28:
## Known stack suffix:
## ids_and_type option(SEMICOLON)
## LR(1) items:
fields -> ids_and_type option(SEMICOLON) . [ RIGHTBRACE ]
## Transitions:
## Reductions:
-- On RIGHTBRACE
--   reduce production fields -> ids_and_type option(SEMICOLON)

State 29:
## Known stack suffix:
## fields
## LR(1) items:
loption(fields) -> fields . [ RIGHTBRACE ]
## Transitions:
## Reductions:
-- On RIGHTBRACE
--   reduce production loption(fields) -> fields

State 30:
## Known stack suffix:
## FUNC
## LR(1) items:
decl -> FUNC . ident LEFTPAR loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On ident shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## FUNC ident
## LR(1) items:
decl -> FUNC ident . LEFTPAR loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On LEFTPAR shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## FUNC ident LEFTPAR
## LR(1) items:
decl -> FUNC ident LEFTPAR . loption(parameters) RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 14
-- On parameters shift to state 33
-- On loption(parameters) shift to state 34
-- On ids_and_type shift to state 143
-- On ident shift to state 24
## Reductions:
-- On RIGHTPAR
--   reduce production loption(parameters) ->

State 33:
## Known stack suffix:
## parameters
## LR(1) items:
loption(parameters) -> parameters . [ RIGHTPAR ]
## Transitions:
## Reductions:
-- On RIGHTPAR
--   reduce production loption(parameters) -> parameters

State 34:
## Known stack suffix:
## FUNC ident LEFTPAR loption(parameters)
## LR(1) items:
decl -> FUNC ident LEFTPAR loption(parameters) . RIGHTPAR loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On RIGHTPAR shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## FUNC ident LEFTPAR loption(parameters) RIGHTPAR
## LR(1) items:
decl -> FUNC ident LEFTPAR loption(parameters) RIGHTPAR . loption(return_type) block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On STAR shift to state 15
-- On LEFTPAR shift to state 36
-- On IDENT shift to state 2
-- On type_expr shift to state 43
-- On return_type shift to state 44
-- On loption(return_type) shift to state 45
-- On ident shift to state 17
## Reductions:
-- On LEFTBRACE
--   reduce production loption(return_type) ->

State 36:
## Known stack suffix:
## LEFTPAR
## LR(1) items:
return_type -> LEFTPAR . return_types RIGHTPAR [ LEFTBRACE ]
## Transitions:
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 37
-- On return_types shift to state 41
-- On ident shift to state 17
## Reductions:

State 37:
## Known stack suffix:
## type_expr
## LR(1) items:
return_types -> type_expr . option(COMMA) [ RIGHTPAR ]
return_types -> type_expr . COMMA return_types [ RIGHTPAR ]
## Transitions:
-- On COMMA shift to state 38
-- On option(COMMA) shift to state 40
## Reductions:
-- On RIGHTPAR
--   reduce production option(COMMA) ->

State 38:
## Known stack suffix:
## type_expr COMMA
## LR(1) items:
option(COMMA) -> COMMA . [ RIGHTPAR ]
return_types -> type_expr COMMA . return_types [ RIGHTPAR ]
## Transitions:
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 37
-- On return_types shift to state 39
-- On ident shift to state 17
## Reductions:
-- On RIGHTPAR
--   reduce production option(COMMA) -> COMMA

State 39:
## Known stack suffix:
## type_expr COMMA return_types
## LR(1) items:
return_types -> type_expr COMMA return_types . [ RIGHTPAR ]
## Transitions:
## Reductions:
-- On RIGHTPAR
--   reduce production return_types -> type_expr COMMA return_types

State 40:
## Known stack suffix:
## type_expr option(COMMA)
## LR(1) items:
return_types -> type_expr option(COMMA) . [ RIGHTPAR ]
## Transitions:
## Reductions:
-- On RIGHTPAR
--   reduce production return_types -> type_expr option(COMMA)

State 41:
## Known stack suffix:
## LEFTPAR return_types
## LR(1) items:
return_type -> LEFTPAR return_types . RIGHTPAR [ LEFTBRACE ]
## Transitions:
-- On RIGHTPAR shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## LEFTPAR return_types RIGHTPAR
## LR(1) items:
return_type -> LEFTPAR return_types RIGHTPAR . [ LEFTBRACE ]
## Transitions:
## Reductions:
-- On LEFTBRACE
--   reduce production return_type -> LEFTPAR return_types RIGHTPAR

State 43:
## Known stack suffix:
## type_expr
## LR(1) items:
return_type -> type_expr . [ LEFTBRACE ]
## Transitions:
## Reductions:
-- On LEFTBRACE
--   reduce production return_type -> type_expr

State 44:
## Known stack suffix:
## return_type
## LR(1) items:
loption(return_type) -> return_type . [ LEFTBRACE ]
## Transitions:
## Reductions:
-- On LEFTBRACE
--   reduce production loption(return_type) -> return_type

State 45:
## Known stack suffix:
## FUNC ident LEFTPAR loption(parameters) RIGHTPAR loption(return_type)
## LR(1) items:
decl -> FUNC ident LEFTPAR loption(parameters) RIGHTPAR loption(return_type) . block SEMICOLON [ TYPE FUNC EOF ]
## Transitions:
-- On LEFTBRACE shift to state 46
-- On block shift to state 141
## Reductions:

State 46:
## Known stack suffix:
## LEFTBRACE
## LR(1) items:
block -> LEFTBRACE . RIGHTBRACE [ SEMICOLON RIGHTBRACE ELSE ]
block -> LEFTBRACE . statements RIGHTBRACE [ SEMICOLON RIGHTBRACE ELSE ]
## Transitions:
-- On VAR shift to state 47
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On SEMICOLON shift to state 99
-- On RIGHTBRACE shift to state 138
-- On RETURN shift to state 100
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On LEFTBRACE shift to state 46
-- On IF shift to state 102
-- On IDENT shift to state 2
-- On FOR shift to state 109
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On stmt_desc shift to state 130
-- On stmt shift to state 131
-- On statements shift to state 139
-- On simple_stmt_desc shift to state 110
-- On simple_stmt shift to state 134
-- On separated_nonempty_list(COMMA,expr) shift to state 95
-- On if_stmt_desc shift to state 106
-- On if_stmt shift to state 135
-- On ident shift to state 60
-- On exprs shift to state 118
-- On expr_desc shift to state 65
-- On expr shift to state 123
-- On block shift to state 136
## Reductions:

State 47:
## Known stack suffix:
## VAR
## LR(1) items:
stmt_desc -> VAR . separated_nonempty_list(COMMA,ident) option(type_expr) loption(init) [ SEMICOLON RIGHTBRACE ]
## Transitions:
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,ident) shift to state 48
-- On ident shift to state 24
## Reductions:

State 48:
## Known stack suffix:
## VAR separated_nonempty_list(COMMA,ident)
## LR(1) items:
stmt_desc -> VAR separated_nonempty_list(COMMA,ident) . option(type_expr) loption(init) [ SEMICOLON RIGHTBRACE ]
## Transitions:
-- On STAR shift to state 15
-- On IDENT shift to state 2
-- On type_expr shift to state 49
-- On option(type_expr) shift to state 50
-- On ident shift to state 17
## Reductions:
-- On SEMICOLON RIGHTBRACE EQ
--   reduce production option(type_expr) ->

State 49:
## Known stack suffix:
## type_expr
## LR(1) items:
option(type_expr) -> type_expr . [ SEMICOLON RIGHTBRACE EQ ]
## Transitions:
## Reductions:
-- On SEMICOLON RIGHTBRACE EQ
--   reduce production option(type_expr) -> type_expr

State 50:
## Known stack suffix:
## VAR separated_nonempty_list(COMMA,ident) option(type_expr)
## LR(1) items:
stmt_desc -> VAR separated_nonempty_list(COMMA,ident) option(type_expr) . loption(init) [ SEMICOLON RIGHTBRACE ]
## Transitions:
-- On EQ shift to state 51
-- On loption(init) shift to state 97
-- On init shift to state 98
## Reductions:
-- On SEMICOLON RIGHTBRACE
--   reduce production loption(init) ->

State 51:
## Known stack suffix:
## EQ
## LR(1) items:
init -> EQ . exprs [ SEMICOLON RIGHTBRACE ]
## Transitions:
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On separated_nonempty_list(COMMA,expr) shift to state 95
-- On ident shift to state 60
-- On exprs shift to state 96
-- On expr_desc shift to state 65
-- On expr shift to state 66
## Reductions:

State 52:
## Known stack suffix:
## STRING
## LR(1) items:
expr_desc -> STRING . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
## Reductions:
-- On VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND
--   reduce production expr_desc -> STRING

State 53:
## Known stack suffix:
## STAR
## LR(1) items:
expr_desc -> STAR . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 94
## Reductions:

State 54:
## Known stack suffix:
## NIL
## LR(1) items:
expr_desc -> NIL . [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
## Reductions:
-- On VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND
--   reduce production expr_desc -> NIL

State 55:
## Known stack suffix:
## MINUS
## LR(1) items:
expr_desc -> MINUS . expr [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 93
## Reductions:

State 56:
## Known stack suffix:
## LEFTPAR
## LR(1) items:
expr_desc -> LEFTPAR . expr RIGHTPAR [ VERTICALBARVERTICALBAR STAR SLASH SEMICOLON RIGHTPAR RIGHTBRACE PLUSPLUS PLUS PERCENT MINUSMINUS MINUS LEFTBRACE EQ DOT COMP COMMA COLONEQ AMPERSANDAMPERSAND ]
## Transitions:
-- On STRING shift to state 52
-- On STAR shift to state 53
-- On NIL shift to state 54
-- On MINUS shift to state 55
-- On LEFTPAR shift to state 56
-- On IDENT shift to state 2
-- On CST shift to state 57
-- On BANG shift to state 58
-- On AMP shift to state 59
-- On ident shift to state 60
-- On expr_desc shift to state 65
-- On expr shift to state 91
## Reductions:
